--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 						<div class="introduct">
 							<img class="avatar"
 								src="https://blog.sunguoqi.com/upload/avatar.png">
-							<P style="padding-top:1em;">小胖子</p>
+							<P style="padding-top:1em;">小胖子（110斤左右）</p>
 							<br>
-							<p>吃货
+							<p>国际认定证书吃货一级
 							</p> <br>
 							<p>
-								调皮<br>
-								<br>捣蛋鬼
+								抖音日刷近千<br>
+								<br>嘴硬吃辣王
 							</p>
 							<div class="chatbox">
 								<div class="line loading"> 
