--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="ch about">
 				<div class="container">
-					<h2 class="chtitle">Who am <span>鎏鎏</span>？</h2>
+					<h2 class="chtitle">Who is <span>鎏鎏</span>？</h2>
 					<div class="clear">
 						<div class="introduct">
 							<img class="avatar"
